Opened 17 years ago
Closed 17 years ago
#1638 closed bug (fixed)
[Terminal] : copy a chunk of text bigger than a word, can not paste that chunk to other apps
Reported by: | kaoutsis | Owned by: | jackburton |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
[Terminal] : copy a chunk of text bigger than a word, can not paste that chunk to other apps: tested with BeIDE and StyledEdit, hrev22985
Change History (5)
comment:1 by , 17 years ago
comment:2 by , 17 years ago
Owner: | changed from | to
---|
comment:3 by , 17 years ago
_ResizeSelectedRegion() is very broken. If you select with the mouse from right to left it simply doesn't work. Selecting from left to right works. I fixed it locally by avoid using it in MouseMoved(), but the selection mechanism needs much more work. I'll commit the fix next week probably.
comment:4 by , 17 years ago
Status: | new → assigned |
---|
Note:
See TracTickets
for help on using tickets.
the description is not correct (i have no permission to edit so i make a comment here): selecting with the mouse a chunk of text, even if the text is one character long, can not paste that chunk of text to other apps.