Selecting text from right to left didn't work. I disabled the use of ResizeSelection() because it didn't support this. Selecting text flicker a lot now, it will be fixed later. Selection should be changed to work a bit more like BTextView. This fixes bug #1638

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23058 a95241bf-73f2-0310-859d-f6bbb57e9c96